# rustflix

./: .gitattributes  .gitignore  .prettierrc  CLAUDE.md  README.md  TODO.md  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.claude/commands/: iterate.md
.github/: pull_request_template.md
.github/workflows/: release.yml
app/: custom.css
docs/superpowers/plans/: 2026-05-24-metadata-sync.md  2026-05-25-imdb-fallback-provider.md
docs/superpowers/specs/: 2026-05-24-admin-area-design.md  2026-05-24-metadata-sync-design.md  2026-05-25-imdb-fallback-provider-design.md
scripts/: SETUP-UPDATER.md  fetch-mpv.ps1  release.ps1  release.sh  setup-updater.ps1  setup-updater.sh
src/: App.tsx  AppSidebar.tsx  Layout.tsx  Router.tsx  Sidebar.tsx  app.css  app.html  main.tsx
src-macro/: Cargo.toml
src-macro/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_init.sql  0001_initial.sql  0002_metadata.sql  0002_orphaned.sql  0003_metadata_sync.sql
src-tauri/src/: commands.rs  database.rs  db.rs  directories.rs  error.rs  films.rs  images.rs  lib.rs  macros.rs  main.rs  models.rs  player.rs  queries.rs  scanner.rs  state.rs
src-tauri/src/admin/: mod.rs
src-tauri/src/characters/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/db/: mod.rs
src-tauri/src/directories/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/directors/: actions.rs  commands.rs  mod.rs
src-tauri/src/films/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/genres/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/images/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/keywords/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/languages/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/metadata/: apply.rs  dispatch.rs  imdb.rs  matching.rs  mod.rs  queries.rs  tmdb.rs  worker.rs
src-tauri/src/persons/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/scrapers/: actions.rs  commands.rs  mod.rs  models.rs
src-tauri/src/server/: mod.rs  stream_film.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/stream/: mod.rs
src-tauri/src/tmdb/: mod.rs
src-tauri/tests/fixtures/: imdb-graphql-edge.json  imdb-graphql-movie.json  imdb-graphql-show.json  imdb-suggestion-movie.json
src/archive/: Films.old.tsx
src/components/: Avatar.tsx  Cover.tsx  ModeToggle.tsx  MoviePlayer.tsx  PersonBox.tsx  WithTooltip.tsx
src/components/cards/: InfoTable.tsx
src/components/datatables/: core.tsx
src/components/hooks/: use-fullscreen.ts
src/components/icons/: SaveCartridgeIcon.tsx
src/components/tables/: table.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  (+24 more)
src/directories/: Directories.tsx  DirectoryDialog.tsx  DirectoryForm.tsx  DirectoryList.tsx  DirectoryTable.tsx  useDirectoryAdd.tsx
src/films/: Films.tsx
src/home/: Home.tsx
src/hooks/: use-fullscreen.ts
src/lib/: api.ts  atoms.ts  lucide.ts  settings.ts  types.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
(+110 files in other folders)
