[package]
name = "rustflix"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
dirs = "5.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
humantime = "2.1.0"                                                 # parse runtime
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.1"
image = { version = "0.25.2" }
base64 = "0.22.1"
html-escape = "0.2.13"
iso8601 = "0.6.1"

# For setting up an HTTP server with Axum
axum = "0.6"
# For handling asynchronous streams
tokio-util = "0.7"
# For file streaming over HTTP
hyper = "0.14"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
