[package]
name = "rustflix"
version = "0.1.0"
description = "Local-library Netflix-style media app"
authors = ["you"]
edition = "2021"

[lib]
name = "rustflix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "derive",
] }
# Force the transitive libsqlite3-sys to bundle SQLite so we don't depend on a system lib.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
walkdir = "2"
dirs = "5"
anyhow = "1"
thiserror = "1"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "net", "process", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
unicode-normalization = "0.1"
